@@ -1,0 +1,4 @@
+from base import ITCRegistry
+
+
+ITCRegistry.register("jira", {"label": "Jira REST connector"})
